# cookiecutter-kevpy

./: .hgignore  README.md  README.rst  cookiecutter.json
{{ cookiecutter.project_slug }}/: pyproject.toml
{{ cookiecutter.project_slug }}/src/{{ cookiecutter.module_name }}/: __init__.py
