[build-system]
requires = ["setuptools >= 63.1.0", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "{{ cookiecutter.module_name }}"
description = ""
readme = ""
# do something better here...make version dynamic
version = "{{ cookiecutter.version }}"
# requires-python = ""
# license = ""
# classifiers = [

# ]
dependencies = [

]
# dynamic = []

[project.scripts]
ld-tool = "{{ cookiecutter.module_name }}.main:cli_main"
